# SnippetBox

./: .gitignore  README.md  pyproject.toml  snippetbox.py
snippetbox/: __init__.py  cli.py  clipboard.py  completion.py  core.py  exporters.py  gui.py  highlight.py  placeholders.py
tests/: test_core.py  test_features.py
